# Syntax-Directed-Translator

./: .gitignore  CFG_rules.txt  CFG_rules2.txt  CMakeLists.txt  NFA.json  README.md  Test1.txt  Test2.txt  Test3.txt  Test4.txt  main.cpp  minimizedDFAToCSV.py  parsing table.txt  parsingTableToCSV.py  parsing_table.csv  tdp_out.txt
CFGParser/: CFGParser.cpp  CFGParser.h
DFA/: DFA.cpp  DFA.h
First Follow/: First_Follow.cpp  First_Follow.h
FirstFollow/: First_Follow.h
GrammarSorter/: GrammarSorter.cpp  GrammarSorter.h
LexicalAnalyzer/: LexicalAnalyzer.cpp  LexicalAnalyzer.h  lexicalAnalyzer.cpp  lexicalAnalyzer.h
NFA/: NFA.cpp  NFA.h
Outputs/: dfa_states_output.txt  dfa_states_output2.txt  minimizedDFA.csv
Parser/: PatternMatcher.cpp  PatternMatcher.h  parser.cpp  parser.h
ParsingTable/: ParsingTable.cpp  ParsingTable.h
PatternMatcher/: PatternMatcher.cpp  PatternMatcher.h
Phase1 Bonus/: grammer using lex.txt  lex.l  lex.yy.c
TopDownParser/: TopDownParser.cpp  TopDownParser.h
patternmatcher/: PatternMatcher.cpp  PatternMatcher.h
